# MediaManager

./: .gitignore  CMakeLists.txt  README.md
Model/: Media.cpp  Media.h
doc/: MediaManagerModel.drawio
saves/: last.json
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MediaManager.pro  main.cpp  resources.qrc
src/Controller/: InfoListPainter.cpp  MediaListController.cpp  MediaListController.h
src/Model/: AddVisitor.cpp  AddVisitor.h  Articles.cpp  Articles.h  EditVisitor.cpp  EditVisitor.h  ImageValidator.cpp  ImageValidator.h  JSONEditor.cpp  JSONEditor.h  JSONVisitor.cpp  JSONVisitor.h  Literature.cpp  Literature.h  Media.cpp  Media.h  ViewVisitor.cpp  ViewVisitor.h  Visitable.h  Visitor.h
src/Model/ArticlesClasses/: AcademicArticle.cpp  AcademicArticle.h  NewspaperArticle.cpp  NewspaperArticle.h
src/Model/LiteratureClasses/: Book.cpp  Book.h  Poem.cpp  Poem.h
src/View/: CreateMediaWidget.cpp  CreateMediaWidget.h  GridView.cpp  GridView.h  InfoListPainter.cpp  InfoListPainter.h  MediaFilterController.cpp  MediaFilterController.h  MediaListController.cpp  MediaListController.h  MenuBar.cpp  MenuBar.h  RightDynamicWidget.cpp  RightDynamicWidget.h  StyleManager.cpp  StyleManager.h  ViewMediaWidget.cpp  ViewMediaWidget.h
